option(INSTALL_MBEDTLS_HEADERS OFF)
option(ENABLE_TESTING OFF)
option(ENABLE_PROGRAMS OFF)
add_subdirectory(mbedtls)
set(mbedtls_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mbedtls CACHE PATH "Path to a root of mbedtls dependency")

set_target_properties(apidoc PROPERTIES FOLDER "rubbish" EXCLUDE_FROM_ALL true EXCLUDE_FROM_DEFAULT_BUILD true)
set_target_properties(lib PROPERTIES FOLDER "rubbish" EXCLUDE_FROM_ALL true EXCLUDE_FROM_DEFAULT_BUILD true)
set_target_properties(mbedcrypto PROPERTIES FOLDER "sdk/mbedtls")
set_target_properties(mbedtls PROPERTIES FOLDER "sdk/mbedtls")
set_target_properties(mbedx509 PROPERTIES FOLDER "sdk/mbedtls")
